agregar estructura HTML
esta es la accion principal del sitio se agrego la estructura principal para hacer uso de selectores CSS definidos previamente

--- a/css/main.css
+++ b/css/main.css
@@ -5,5 +5,5 @@
  mainprincipal¨{
      width: 600pix;
      background-color: green;
-     margin: 0 auto;/*centra el bloque
+     margin: 0 auto;/*centra el bloque*/
  }
